--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,6 +25,8 @@ fs2 = "0.4"
 rand = "0.8"
 chrono = { version = "0.4", features = ["serde"] }
 reqwest = { version = "0.12", features = ["json"] }
+eventsource-client = "0.12"
+futures = "0.3"
 base64 = "0.22"
 dirs = "5.0"
 libc = "0.2"
